--- a/style/style.css
+++ b/style/style.css
@@ -1,1 +1,11 @@
 @import "../node_modules/antd/dist/antd.css";
+
+.slick-arrow:before {
+	color: #3e3e3e !important;
+}
+
+.slick-slide.slick-center img {
+	transform: scale(1.1);
+	margin-left: auto;
+	margin-right: auto;
+}
