--- a/style/style.css
+++ b/style/style.css
@@ -4,8 +4,7 @@
 	color: #3e3e3e !important;
 }
 
-.slick-slide.slick-center img {
-	transform: scale(1.1);
-	margin-left: auto;
-	margin-right: auto;
+.slick-slide img {
+	display: block;
+	margin: auto;
 }
