--- a/style/style.css
+++ b/style/style.css
@@ -8,3 +8,9 @@
 	display: block;
 	margin: auto;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
+}
